[gd_scene load_steps=2 format=3 uid="uid://b20fckocvf0xf"]

[ext_resource type="Script" path="res://game/character/player_camera.gd" id="1_4sxyx"]

[node name="PlayerCamera" type="Node3D"]
script = ExtResource("1_4sxyx")

[node name="CameraYaw" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="CameraPitch" type="Node3D" parent="CameraYaw"]
unique_name_in_owner = true

[node name="SpringArm3D" type="SpringArm3D" parent="CameraYaw/CameraPitch"]
unique_name_in_owner = true
spring_length = 5.0

[node name="Camera3D" type="Camera3D" parent="CameraYaw/CameraPitch/SpringArm3D"]
unique_name_in_owner = true
